# python-sdk

./: .gitignore  CHANGELOG.md  DELIVERY.md  README.md  SUMMARY.md  generate_api.py  pyproject.toml  requirements.txt
examples/: basic_example.py
jiuwufen_sdk/: __init__.py  client.py  exceptions.py  models_generated.py
jiuwufen_sdk/api/: __init__.py  delivery.py  digitalProduct.py  goods.py  inventory.py  logistics.py  merchant.py  merchantOnboarding.py  order.py  product.py  returns.py
jiuwufen_sdk/utils/: __init__.py  signature.py
tests/: test_signature.py
